rel 20.4.0
* fix rank table is generation (#25)
* Allow negative coin values
* Include team name in log messages
* Ability to use tracker to verify location
* HQ: event log - Team_logged event not contain info (#23)
* duplicite keys in log 'err key entered' (#4)
* Bombs
* Wrapper CLI script installed to the executable PATH
* change version number scheme to year.month.release

rel 0.2.10
* fix permissions for /var/lib/iquest/smarty dir (#14)
* alow negative values of gained coins

rel 0.2.9
* chroust: adding replacements <hint-cnt> and <timeout> to text files
* Play audio/video directly in browser using HTML5 (#3)
* chroust: suppress WARNING: clue_IDs are not specified for hint '0' (#9)
* chroust: ability to define initial value for user wallet (#11)
* chroust: Unexpected exception if there is unknown option (#20)
* Directory /var/lib/serweb-frmwrk/smarty/ might be created with wrong permissions (#14)

rel 0.2.8
* HQ event log: filter - log type - allow multiple selection (#6)
* HQ event log: filter - team name cannot be scrolled if do not fit screen (#5)
* HQ event log: ability to disable auto-refresh (#7)
* chroust: fix typo in name of config option (#18)

rel 0.2.7
* adding CLI commands for enter key and clear ranks

rel 0.2.6
* correcting SQL commands for solution scheduling

rel 0.2.5
* small fixes for php7

rel 0.2.4
* HQ: event log - fix autorefresh
* fix of loading bootstrap-multiselect javascript

rel 0.2.3
* contest graph: mark the solved clue groups with green color
* metadata: introducing TRUE() and FALSE() conditions for next_cgrp_id
* chroust: better error message if clue is missing but a hint is defined
* chroust: display total price of the hints in the summary
* For each clue grp display when it has been gained

rel 0.2.2
* Fix order of clue groups that are gained at single moment
* Fix PHP session configuration

rel 0.2.1
* Added support for svg and pdf files

rel 0.2.0
* Possibility to show contest graph in team interface